# relay

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/relay/: __init__.py  __main__.py  endpoints.py  injection_probe.py  integrity.py  local_agent.py  local_agent_cli.py  local_git.py  local_loop.py  local_mcp.py  local_repomap.py  local_session.py  local_tools.py  messages_api.py  review.py
tests/: test_endpoints.py  test_injection_probe.py  test_integrity.py  test_local_agent.py  test_local_agentic.py  test_local_git.py  test_local_mcp.py  test_local_repomap.py  test_messages_api.py  test_review.py
